--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-   <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script> 
+   <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
 
    <!-------------------------------------------->
@@ -48,6 +48,11 @@
 
    <!-- the body of your page goes here -->
    <!-- stuff -->
+   <div class="container text-center">
+      <img class="d-block mx-auto mb-4" src="./images/elmo.jpg" alt="" width="200" height="200">
+      <h1>Welcome to Ephraim's Hiking App</h1>
+      <a href="login.html" class="btn btn-info" role="button">Log in</a>
+   </div>
 
    <!-- our own footer goes here-->
    <nav id="footerPlaceholder"></nav>
@@ -57,7 +62,10 @@
    <!---------------------------------------------->
    <script src="./scripts/firebaseAPI_TEAM99.js"></script>
    <script src="./scripts/skeleton.js"></script>
-   <!-- <script src="./scripts/script.js"></script> -->
+   <script src="./scripts/script.js"></script>
+   <script>
+      logout();       //make sure user is logged out
+   </script>
 
 </body>
 
