--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     <!-- the body of your page goes here -->
     <!-- stuff -->
     <div class="container text-center">
-        <img class="d-block mx-auto mb-4 responsive" src="./images/hike3.jpg" alt="">
-        <h1>Welcome to Ephraim's Hiking App</h1>
-        <a href="login.html" class="btn btn-info" role="button">Log in</a>
+        <img class="d-block mx-auto mb-4 responsive" src="./images/apple.jpg" alt="">
+        <h1>Apple yum yes</h1>
+        <a href="login.html" class="btn btn-info" role="button">Log in (update host)</a>
     </div>
 
     <!-- our own footer goes here-->
